--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,58 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.scrollbar-hide::-webkit-scrollbar{
+    display: none;
+}
+.scrollbar-hide{
+    -ms-overflow-style:none;
+    scrollbar-width: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.blog-content{
+    padding: 36px 0;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.blog-content b {
+    margin-bottom: 10px;
+    font-weight: 500;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.blog-content h1 {
+    margin-bottom: 10px;
+    font-weight: 700; /* Boldest */
+    font-size: 26px; /* Example size for h1 */
+}
+
+.blog-content h2 {
+    margin-bottom: 10px;
+    font-weight: 600; /* Slightly less bold */
+    font-size: 22px; /* Example size for h2 */
+}
+
+.blog-content h3 {
+    margin-bottom: 10px;
+    font-weight: 500; /* Same as bold text */
+    font-size: 18px; /* Example size for h3 */
+}
+
+.blog-content p {
+    margin-bottom: 10px;
+
+}
+
+.blog-content a {
+    color: blue;
+    text-decoration: underline;
+    font-size: 1rem; 
+}
+
+.blog-content ul, 
+.blog-content ol {
+    margin-bottom: 10px;
+    padding-left: 20px;
+}
+
+.blog-content li {
+    margin-bottom: 5px;
 }
